--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 [build.environment]
   NODE_VERSION = "18"
   NPM_FLAGS = "--legacy-peer-deps"
+  NUXT_TELEMETRY_DISABLED = "1"
 
 [[redirects]]
   from = "/*"
