Fix JavaScript loading issues and asset handling

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,12 @@
   NUXT_TELEMETRY_DISABLED = "1"
 
 [[redirects]]
+  from = "/_nuxt/*"
+  to = "/_nuxt/:splat"
+  status = 200
+  force = true
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
