Fix JavaScript loading issues with updated configuration

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,12 +13,14 @@
   to = "/_nuxt/:splat"
   status = 200
   force = true
+  conditions = {Path = ["/_nuxt/*"]}
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
   force = true
+  conditions = {Path = ["/*"]}
 
 [[headers]]
   for = "/*"
