--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "frontend"
-  command = "npm install && npm run generate"
+  command = "npm install && npm run build"
   publish = ".output/public"
 
 [build.environment]
