fix: update Netlify redirects to properly serve _nuxt assets and fix white screen

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,11 @@
   VITE_API_URL = "https://murder-mystery-backend.onrender.com"
 
 [[redirects]]
+  from = "/_nuxt/*"
+  to = "/_nuxt/:splat"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
